# codex-workbench

./: .gitattributes  .gitignore  AGENTS.md  CURRENT.md  README.md  WORKSPACE.md  pyproject.toml
.codex/: hooks.json
.codex/hooks/: session_start.py  user_prompt_submit.py  workbench_common.py
docs/briefs/: README.md
docs/guides/: README.md  understanding-codex-workbench.md
docs/materials/: README.md
docs/policies/: action-routing.md  agent-coordination.md  lifecycle-semantics.md  materials.md  model-schema.md  recovery-and-concurrency.md  risk-and-process.md  services-and-environment.md  state-and-gates.md
services/: registry.yaml
src/codex_workbench/: __init__.py  _index_conflicts.py  _index_records.py  _index_types.py  _index_views.py  _package_core.py  _package_create.py  _package_tasks.py  advice.py  archive.py  cli.py  doctor.py  errors.py  ids.py  index.py  io.py  lifecycle.py  materials.py  models.py  packages.py  records.py  refs.py  (+10 more)
tests/: __init__.py  cli_test_support.py  test_advice.py  test_archive.py  test_cli.py  test_cli_archive_commands.py  test_cli_core.py  test_cli_evidence_commands.py  test_cli_material_commands.py  test_cli_record_commands.py  test_cli_requirement_task.py  test_cli_service_commands.py  test_cli_task_context.py  test_cli_task_lifecycle.py  test_codex_integration.py  test_doctor.py  test_import.py  test_index.py  test_io.py  test_lifecycle.py  test_materials.py  test_models.py  test_packages.py  test_records.py  test_reusable.py  test_services.py  test_structure.py  test_templates.py  test_validation.py  test_workspace.py
(+40 files in other folders)
