[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codex-workbench"
version = "0.1.0"
description = "个人本地 Codex workbench 基线与工具包。"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "codex-workbench maintainers" },
]
dependencies = [
  "pathspec>=0.12",
  "platformdirs>=4.3",
  "pydantic>=2.11",
  "PyYAML>=6.0",
  "rich>=13.9",
  "typer>=0.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
]

[project.scripts]
codex-workbench = "codex_workbench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_workbench"]

[tool.hatch.build.targets.wheel.force-include]
"templates/work-products" = "codex_workbench/template_files/work-products"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
